Fixed waiting period in more info; dropdown arrow in more info should be easier to tap on mobile;

--- a/src/main/webapp/bundles/health_v4/less/tabs.less
+++ b/src/main/webapp/bundles/health_v4/less/tabs.less
@@ -229,10 +229,11 @@
 }
 
 .extrasCollapseContentLink {
+  width: 10%;
   float: right;
-  margin-right: 20px;
   text-decoration: none !important;
   color: #1C3E94;
+  text-align: center;
 }
 
 .benefitCollapsedContent {
